--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -36,12 +36,10 @@
 <h:body>
     <f:view>
 
-        <!-- Les messages d'erreur s'affichent ici -->
         <h:messages errorStyle="color: red" showDetail="true" showSummary="false" globalOnly="true"/>
 
-        <h:form id="form">
+        <h:form id="roleForm">
 
-            <!-- SECTION RÔLE SYSTÈME -->
             <p:outputLabel for="rolesysteme" value="Rôle de l'API : "/>
             <p:selectOneMenu id="rolesysteme" value="#{bb.roleSysteme}" editable="true"
                              required="true" requiredMessage="Vous devez indiquer le rôle de l'API"
@@ -52,52 +50,54 @@
 
             <h:outputText value="  "/>
             <h:commandButton value="Nouveau chat" action="#{bb.nouveauChat}" />
+        </h:form>
 
-            <!-- SECTION UPLOAD DE FICHIERS PDF POUR RAG -->
-            <div class="upload-section">
-                <h3>📁 Chargement de PDF pour le RAG <span class="feature-badge">Fonctionnalité 3</span></h3>
+        <hr/>
 
-                <h:form id="pdfForm" enctype="multipart/form-data">
-                    <h:panelGrid columns="3" style="margin-bottom: 10px;">
-                        <h:outputLabel for="file" value="Fichier PDF :"/>
-                        <p:fileUpload id="file" value="#{bb.fichier}"
-                                      mode="simple" skinSimple="true"
-                                      allowTypes="/(\.|\/)(pdf)$/"
-                                      requiredMessage="Veuillez sélectionner un fichier PDF"/>
-                        <h:message for="file" errorStyle="color: red"/>
-                    </h:panelGrid>
+        <div class="upload-section">
+            <h3>📁 Chargement de PDF pour le RAG <span class="feature-badge">Fonctionnalité 3</span></h3>
 
-                    <p:commandButton value="📤 Uploader le PDF"
-                                     action="#{bb.upload}"
-                                     update="pdfForm messageUpload ragStatus"
-                                     icon="pi pi-upload"
-                                     style="margin-right: 10px;"/>
+            <h:form id="pdfForm" enctype="multipart/form-data">
+                <h:panelGrid columns="3" style="margin-bottom: 10px;">
+                    <h:outputLabel for="file" value="Fichier PDF :"/>
+                    <p:fileUpload id="file" value="#{bb.fichier}"
+                                  mode="simple" skinSimple="true"
+                                  allowTypes="/(\.|\/)(pdf)$/"
+                                  requiredMessage="Veuillez sélectionner un fichier PDF"/>
+                    <h:message for="file" errorStyle="color: red"/>
+                </h:panelGrid>
 
-                    <h:outputText id="messageUpload"
-                                  value="#{bb.messagePourChargementFichier}"
-                                  style="color: green; font-weight: bold;"/>
-                </h:form>
+                <p:commandButton value="📤 Uploader le PDF"
+                                 action="#{bb.upload}"
+                                 update="@form:messageUpload @form:ragStatus chatForm:paneltotal"
+                                 icon="pi pi-upload"
+                                 ajax="false" style="margin-right: 10px;"/>
 
-                <!-- Statut RAG -->
-                <div id="ragStatus" class="rag-info">
-                    <h:outputText value="📊 Statut RAG : " style="font-weight: bold;"/>
-                    <h:outputText value="Système de RAG actif avec embeddings locaux"
-                                  style="color: #007bff; font-weight: bold;"/>
-                    <br/>
-                    <h:outputText value="Fonctionnalités activées : "/>
-                    <ul>
-                        <li>RAG avec documents PDF <span class="feature-badge">Fonctionnalité 2</span></li>
-                        <li>Embedding local AllMiniLmL6V2 <span class="feature-badge">Fonctionnalité 4</span></li>
-                        <li>Contrôle de diversité (topK=20) <span class="feature-badge">Fonctionnalité 1</span></li>
-                        <li>Upload de fichiers PDF <span class="feature-badge">Fonctionnalité 3</span></li>
-                    </ul>
-                </div>
+                <h:outputText id="messageUpload"
+                              value="#{bb.messagePourChargementFichier}"
+                              style="color: green; font-weight: bold;"/>
+            </h:form>
+
+            <div id="ragStatus" class="rag-info">
+                <h:outputText value="📊 Statut RAG : " style="font-weight: bold;"/>
+                <h:outputText value="Système de RAG actif avec embeddings locaux"
+                              style="color: #007bff; font-weight: bold;"/>
+                <br/>
+                <h:outputText value="Fonctionnalités activées : "/>
+                <ul>
+                    <li>RAG avec documents PDF <span class="feature-badge">Fonctionnalité 2</span></li>
+                    <li>Embedding local AllMiniLmL6V2 <span class="feature-badge">Fonctionnalité 4</span></li>
+                    <li>Contrôle de diversité (topK=20) <span class="feature-badge">Fonctionnalité 1</span></li>
+                    <li>Upload de fichiers PDF <span class="feature-badge">Fonctionnalité 3</span></li>
+                </ul>
             </div>
+        </div>
 
-            <!-- Disposition en deux colonnes -->
+        <hr/>
+
+        <h:form id="chatForm">
             <h:panelGrid id="paneltotal" columns="2" columnClasses="topAligned,topAligned">
 
-                <!-- COLONNE DE GAUCHE (Question / Réponse) -->
                 <h:panelGrid id="panelgauche" columns="1">
                     <h:panelGrid id="questionetreponse" columns="1">
                         <h:panelGroup>
@@ -107,20 +107,18 @@
                         </h:panelGroup>
                         <h:inputTextarea id="question" value="#{bb.question}" title="Question"
                                          cols="50" rows="5" placeholder="Posez votre question ici... Le système utilisera les PDF chargés pour répondre."/>
-                        <h:commandButton value="🚀 Envoyer la question (avec RAG)" action="#{bb.envoyer}"/>
-
-                        <h:panelGroup>
-                            <h:outputText value="Réponse : "/>
-                            <h:outputText value="(avec contexte RAG)" style="color: #666; font-size: 0.9em;"/>
-                            <button type="button" onclick="copyToClipboard('reponse')">Copier réponse</button>
-                        </h:panelGroup>
+                        <h:commandButton value="🚀 Envoyer la question (avec RAG)" action="#{bb.envoyer}"
+                                         update="panelgauche paneldroit"/> <h:panelGroup>
+                        <h:outputText value="Réponse : "/>
+                        <h:outputText value="(avec contexte RAG)" style="color: #666; font-size: 0.9em;"/>
+                        <button type="button" onclick="copyToClipboard('reponse')">Copier réponse</button>
+                    </h:panelGroup>
                         <h:inputTextarea id="reponse" value="#{bb.reponse}" title="Réponse"
                                          cols="50" rows="15" readonly="true"
                                          style="background-color: #f8f9fa; border: 1px solid #28a745;"/>
 
                     </h:panelGrid>
 
-                    <!-- INFORMATIONS RAG -->
                     <div class="rag-info">
                         <h4>💡 Comment utiliser le RAG :</h4>
                         <ol>
@@ -139,19 +137,17 @@
 
                 </h:panelGrid>
 
-                <!-- COLONNE DE DROITE (Conversation) -->
                 <h:panelGrid id="paneldroit" columns="1" style="vertical-align: top;">
                     <h:panelGroup>
                         <h:outputText value="Historique de conversation :"/>
                         <button type="button" onclick="copyToClipboard('conversation')">Copier conversation</button>
                         <h:commandButton value="🧹 Effacer l'historique" action="#{bb.effacerHistorique}"
-                                         style="margin-left: 10px; background-color: #dc3545; color: white;"/>
-                    </h:panelGroup>
+                                         style="margin-left: 10px; background-color: #dc3545; color: white;"
+                                         update="paneldroit"/> </h:panelGroup>
                     <h:inputTextarea id="conversation" rows="30" cols="50" readonly="true"
                                      value="#{bb.conversation}" title="Conversation entière"
                                      style="background-color: #f8f9fa;"/>
 
-                    <!-- FICHIERS CHARGÉS -->
                     <div class="rag-info" style="margin-top: 15px;">
                         <h4>📄 Fichiers PDF chargés :</h4>
                         <h:dataTable value="#{bb.fichiersCharges}" var="fichier"
